Committing working ANT build.

--- a/package/build.properties
+++ b/package/build.properties
@@ -1,17 +1,18 @@
 ######################################
 ## Project information
 ######################################
-author	= Alex Toledo
+project.author	= Alex Toledo
 project.owner	= AutumnTactics
 project.owner.url	= http://www.autumntactics.com
 project.fullname	= Bedrock Framework
 project.version		= 1.0.0
 project.name	= bedrock
 project.year = 2008
-application.name	= bedrockframework
+project.copyright = Copyright 2008 ${project.owner}. All Rights Reserved.
+project.deployname = ${project.name}${project.version}
 
 # Where flex is installed:
-FLEX_HOME=C:/Program Files/Adobe/Flex Builder 2/Flex SDK 2/
+FLEX.HOME = C:/Program Files/Adobe/Flex Builder 3/sdks/3.0.0
 DEFAULT.LOCAL = en_US
 ENCODING = UTF-8
 
@@ -19,61 +20,31 @@ ENCODING = UTF-8
 ## Tools
 ######################################
 
-### FlexTask 
-FLEX.TASK.DIR=tools/FlexTasks/lib/flexTasks.jar
-FLEX.ANT.EXE=${FLEX_HOME}/bin/asdoc.exe
-wrapper.dir=html-template
+asdoc.exe=${FLEX.HOME}/bin/asdoc.exe
+compc.exe=${FLEX.HOME}/bin/compc.exe
+mxmlc.exe=${FLEX.HOME}/bin/mxmlc.exe
 
-### exe
-asdoc.exe=${FLEX_HOME}/bin/asdoc.exe
-compc.exe=${FLEX_HOME}/bin/compc.exe
-mxmlc.exe=${FLEX_HOME}/bin/mxmlc.exe
+######################################
+# Exclusions
+######################################
 
-### ManifestWriter
-
-manifest.writer=tools/ManifestWriter_1.0.jar
-
-###  Asdoc
-asdoc.tool=flex2.tools.ASDoc
-
-# The name that will appear in the documentation that is generated.
-asdoc.docsname=Bedrock Framework Documentation
-
-# Browsers
-firefox=C:/Program Files/Mozilla Firefox/firefox.exe
-ie=C:/Program Files/Internet Explorer/iexplore.exe
- 
-# Flash Player
-saplayer=player/debug/SAFlashPlayer.exe
+exclude.debug = **/bin-debug 
+exclude.actionscript = **/*.actionScriptProperties, /**.actionScriptProperties
+exclude.project = **/*.project
+exclude.prefs = **/.settings, **/.settings/**
 
 ######################################
 ## Properties
 ######################################
-src.dir=source
+base.dir = ..
+root.dir = trunk/as3
+source.dir= source/com
 deploy.dir=deploy
-bin.dir=bin
-build.dir=build
-wwwroot.dir=wwwroot
+binary.dir=bin
+branch.dir=branches
+
+library.dir=library
+
 docs.dir=docs
-samples.dir=samples
-template.dir=template
-docs.asdoc.dir=${docs.dir}/asdocs
-docs.junitreport.dir=${docs.dir}/junitreport
-lib.dir=lib
-html.file=${bin.dir}/${application.name}.html
-library.name=${project.fullname}_${project.version}
-
-#main.class = ${src.dir}/Application.mxml
-#swf.export = ${bin.dir}/Application.swf
-
-# ASSETS DIR
-#assets.dir=${src.dir}/assets/
-
-######################################
-## Flex Unit
-######################################
-
-flex.unit.runner = ${src.dir}/AntTestRunner.mxml
-flex.unit.swf=${basedir}/${bin.dir}/AntTestRunner.swf
-report.dir=${basedir}/docs/junitreport
-
+docs.docsname=Bedrock Framework Documentation
+docs.template = template
