--- a/package/build.properties
+++ b/package/build.properties
@@ -5,7 +5,7 @@ project.author	= Alex Toledo
 project.owner	= AutumnTactics
 project.owner.url	= http://www.autumntactics.com
 project.fullname	= Bedrock Framework
-project.version		= 1.0.0
+project.version		= 1.1.1
 project.name	= bedrock
 project.year = 2008
 project.copyright = Copyright 2008 ${project.owner}. All Rights Reserved.
@@ -41,7 +41,7 @@ root.dir = trunk/as3
 source.dir= source/com
 deploy.dir=deploy
 binary.dir=bin
-branch.dir=branches
+tags.dir=tags
 
 library.dir=library
 
