--- a/package/build.xml
+++ b/package/build.xml
@@ -143,7 +143,7 @@
 	</target>
 	
 	<target name="createTag" description="Create a branch and tag is with the version number.">
-		<copy todir="${base.dir}/${tags.dir}/${project.deployname}/"  includeEmptyDirs="false">
+		<copy todir="${base.dir}/${tags.dir}/${project.deployname}/"  includeEmptyDirs="true">
 			<fileset dir="${base.dir}/${root.dir}" excludes="${exclude.debug}, ${exclude.prefs}, ${exclude.actionscript}, ${exclude.project}"/>
 		</copy>
 		<copy todir="${base.dir}/${tags.dir}/${project.deployname}/${docs.dir}/">
